[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI_Components/DialogueManager.gd" type="Script" id=1]

[node name="DialogueManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CompleteTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="CompleteTimer" to="." method="_on_CompleteTimer_timeout"]
